--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,13 +2,12 @@ body {
   font-family: sans-serif;
   margin: 0;
   padding: 0;
-  background-color: #fffaf8;
+  background-color: #ffffff;
   color: #333;
 }
 
 main {
-  padding: 2rem;
-  max-width: 800px;
+  padding: 0;
   margin: auto;
 }
 
@@ -24,12 +23,13 @@ nav a {
   font-weight: bold;
 }
 
-section {
-  margin-bottom: 3rem;
-}
-
 footer {
   text-align: center;
   padding: 1rem;
-  background: #f0f0f0;
+  background: #e0f2f3;
+}
+
+#home, #why-therapy, #opinion, #faq{
+    background: #e0f2f3;
+
 }
